# ppv

./: .dockerignore  .editorconfig  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  pay-per-view.md  rust-analyzer.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci-evm.yml  ci-pvm.yml  ci-rust.yml  ci-web.yml  deploy-frontend.yml  deploy-github-pages.yml
blockchain/: Dockerfile  README.md  zombienet.toml
blockchain/chain-service/: Cargo.toml
blockchain/chain-service/src/: chain.rs  cli.rs  handler.rs  keys.rs  lib.rs  main.rs  signer_key.rs
blockchain/chain-service/tests/: chain_unit.rs  crypto.rs  keys.rs  signer_key.rs
blockchain/pallets/content-registry/: Cargo.toml  README.md
blockchain/pallets/content-registry/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
blockchain/pallets/template/: Cargo.toml  README.md
blockchain/pallets/template/src/: benchmarking.rs  tests.rs  weights.rs
blockchain/runtime/: Cargo.toml  README.md  build.rs
blockchain/runtime/src/: benchmarks.rs  genesis_config_presets.rs  lib.rs  tests.rs
blockchain/runtime/src/configs/: mod.rs  xcm_config.rs
docker/: Dockerfile.eth-rpc  Dockerfile.node
docs/: progress.md  why-not-ocw.md
docs/bulletin-chunking-memory-leak/: issue.md
docs/design/: frontend-views.md  gaps.md  spec.md
docs/plans/: 2026-04-20-two-signer-account-model.md  P1a-overview.md  P1a-pallet-runtime.md  P1b-frontend.md  P2a-pallet-runtime.md  P2b-chain-service.md  P2b-content-unlock-service.md  P2c-frontend-encryption.md  P2d.md
docs/research/: frontend-deploy.md  polkadot-stack-template.md  triangle-sdk.md
offchain/content-unlock-service/: Cargo.toml  README.md
offchain/content-unlock-service/src/: chain.rs  cli.rs  crypto.rs  handler.rs  lib.rs  main.rs  reconcile.rs
offchain/content-unlock-service/tests/: chain_unit.rs  crypto.rs  keys.rs  signer_key.rs
offchain/content-unlock-service/tests/fixtures/: .gitattributes  svc_priv_sample.pem
scripts/: README.md  common.sh  deploy-frontend.sh  deploy-paseo.sh  gen-service-key.sh  start-all.sh  start-content-unlock-service.sh  start-dev.sh  start-frontend.sh  start-local.sh  test-statement-store-smoke.sh  test-zombienet.sh
web/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
web/.papi/: polkadot-api.json
web/.papi/descriptors/: .gitignore  generated.json  package.json
web/.papi/metadata/: bulletin.scale  ppview.scale  stack_template.scale
web/scripts/: download-listing-content.ts  smoke-test-ppview-content-unlock-service.ts  smoke-test-ppview-encryption.ts  smoke-test-ppview-integration.ts
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/components/: ContractProofOfExistencePage.tsx  CreateChecklist.test.tsx  CreateChecklist.tsx  FileDropZone.tsx  ListingCard.test.tsx  ListingCard.tsx  SkeletonCard.tsx  ThumbnailPicker.test.tsx  ThumbnailPicker.tsx  VideoPlayer.test.tsx  VideoPlayer.tsx  WalletPicker.test.tsx  WalletPicker.tsx
web/src/config/: deployments.ts  evm.ts  network.ts
web/src/hooks/: contentLockKeyCache.test.ts  contentLockKeyCache.ts  pjsPatch.test.ts  pjsPatch.ts  signerManager.test.ts  signerManager.ts  signerManagerFactory.ts  useAccount.test.ts  useAccount.ts  useBulletin.ts  useBulletinUpload.test.ts  useBulletinUpload.ts  useChain.ts  useConnection.ts  useContentRegistry.test.ts  useContentRegistry.ts  useEncryptionKey.test.ts  useEncryptionKey.ts  useParachainProvider.test.ts  useParachainProvider.ts  useSessionStorage.test.ts  useSessionStorage.ts  useStatementStore.ts
web/src/pages/: AccountsPage.tsx  BrowsePage.test.tsx  BrowsePage.tsx  CreatePage.test.tsx  CreatePage.tsx  EvmContractPage.tsx  HomePage.tsx  ListingDetailPage.test.tsx  ListingDetailPage.tsx  MyListingsPage.test.tsx  MyListingsPage.tsx  NotFoundPage.tsx  PalletPage.tsx  PurchasesPage.test.tsx  PurchasesPage.tsx  PvmContractPage.tsx  StatementStorePage.tsx
web/src/store/: chainStore.test.ts  chainStore.ts
web/src/utils/: bulletinCid.test.ts  bulletinCid.ts  cid.ts  contentCipher.test.ts  contentCipher.ts  contentHash.test.ts  contentHash.ts  encryptionKey.test.ts  encryptionKey.ts  format.test.ts  format.ts  hash.ts  sealedBox.test.ts  sealedBox.ts  sodium.ts
