[package]
name = "stack-template-runtime"
description = "A parachain runtime template for the Polkadot Stack, with EVM and PVM contract support."
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[dependencies]
codec = { features = ["derive"], workspace = true }
cumulus-pallet-parachain-system.workspace = true
hex-literal = { workspace = true, default-features = true }
log = { workspace = true }
pallet-template.workspace = true
polkadot-sdk = { workspace = true, features = [
	"cumulus-pallet-aura-ext",
	"cumulus-pallet-session-benchmarking",
	"cumulus-pallet-weight-reclaim",
	"cumulus-pallet-xcm",
	"cumulus-pallet-xcmp-queue",
	"cumulus-primitives-aura",
	"cumulus-primitives-core",
	"cumulus-primitives-utility",
	"pallet-aura",
	"pallet-authorship",
	"pallet-balances",
	"pallet-collator-selection",
	"pallet-message-queue",
	"pallet-revive",
	"pallet-session",
	"pallet-statement",
	"pallet-sudo",
	"pallet-timestamp",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",
	"pallet-xcm",
	"parachains-common",
	"polkadot-parachain-primitives",
	"polkadot-runtime-common",
	"runtime",
	"sp-state-machine",
	"sp-statement-store",
	"staging-parachain-info",
	"staging-xcm",
	"staging-xcm-builder",
	"staging-xcm-executor",
] }
scale-info = { features = ["derive"], workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }
smallvec = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"cumulus-pallet-parachain-system/std",
	"log/std",
	"pallet-template/std",
	"polkadot-sdk/std",
	"scale-info/std",
	"serde_json/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"pallet-template/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"cumulus-pallet-parachain-system/try-runtime",
	"pallet-template/try-runtime",
	"polkadot-sdk/try-runtime",
]

metadata-hash = ["substrate-wasm-builder/metadata-hash"]
on-chain-release-build = ["metadata-hash"]
